--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,13 @@ dj-database-url==2.2.0
 Django==5.1.1
 django-appconf==1.0.6
 fonttools==4.54.1
+gunicorn==23.0.0
 html5lib==1.1
 idna==3.10
 MarkupSafe==2.1.5
 mdurl==0.1.2
 mysqlclient==2.2.4
+packaging==24.1
 pillow==10.4.0
 pycparser==2.22
 pydyf==0.11.0
